# sg-ecs

./: .clang-format  .gitignore  CMakeLists.txt  README.org
include/: config.hpp
include/core/: change_detection.hpp  component.hpp  component_info.hpp  component_mask.hpp  component_registry.hpp  entity.hpp  entity_index.hpp  entity_location.hpp  tick.hpp
include/storage/: archetype.hpp  blob_array.hpp  resource_store.hpp  sparse_set.hpp  storage_type.hpp  table.hpp
include/world/: world.hpp
src/: game.cpp
